<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="185dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/character_image_view"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/character_image" />

            <ImageView
                android:id="@+id/shadow"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:src="@drawable/gradient_shadow"
                app:layout_constraintEnd_toEndOf="@+id/character_image_view"
                app:layout_constraintStart_toStartOf="@+id/character_image_view"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/shadow" />

            <TextView
                android:id="@+id/character_name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/character_species_textView"
                app:layout_constraintEnd_toEndOf="@+id/character_image_view"
                app:layout_constraintStart_toStartOf="@+id/character_image_view"
                tools:text="name" />

            <TextView
                android:id="@+id/character_species_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="#E6E6E6"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/character_gender_textView"
                app:layout_constraintEnd_toEndOf="@+id/character_image_view"
                app:layout_constraintStart_toStartOf="@+id/character_name_textView"
                tools:text="species" />

            <TextView
                android:id="@+id/character_gender_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="#E6E6E6"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/character_image_view"
                app:layout_constraintEnd_toEndOf="@+id/character_image_view"
                app:layout_constraintStart_toStartOf="@+id/character_species_textView"
                tools:text="gender" />

            <ImageView
                android:id="@+id/character_status_imageView"
                android:layout_width="15dp"
                android:layout_height="15dp"

                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@drawable/icon_status_alive"
                android:contentDescription="@string/character_status" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>